# ogre-audiovideo

./: CMakeLists.txt  OgreVideo.sln  OgreVideo.vcproj  README.md  TheoraVideoPlugin.sln  TheoraVideoPlugin.vcproj  annotated.html  annotated_dup.js  class_ogre_1_1_ogre_theora_data_stream-members.html  class_ogre_1_1_ogre_theora_data_stream.html  class_ogre_1_1_ogre_theora_data_stream.js  class_ogre_1_1_ogre_theora_data_stream__inherit__graph.map  class_ogre_1_1_ogre_theora_data_stream__inherit__graph.md5  class_ogre_1_1_ogre_video_manager-members.html  class_ogre_1_1_ogre_video_manager.html  class_ogre_1_1_ogre_video_manager.js  class_ogre_1_1_ogre_video_manager__inherit__graph.map  class_ogre_1_1_ogre_video_manager__inherit__graph.md5  class_ogre_1_1_ogre_video_plugin-members.html  class_ogre_1_1_ogre_video_plugin.html  class_ogre_1_1_ogre_video_plugin.js  class_ogre_1_1_ogre_video_plugin__inherit__graph.map  class_ogre_1_1_ogre_video_plugin__inherit__graph.md5  class_ogre_ogg_sound_1_1_lockless_queue-members.html  class_ogre_ogg_sound_1_1_lockless_queue.html  class_ogre_ogg_sound_1_1_lockless_queue.js  class_ogre_ogg_sound_1_1_o_o_s_callback-members.html  class_ogre_ogg_sound_1_1_o_o_s_callback.html  class_ogre_ogg_sound_1_1_o_o_s_callback.js  class_ogre_ogg_sound_1_1_o_o_s_callback__inherit__graph.map  class_ogre_ogg_sound_1_1_o_o_s_callback__inherit__graph.md5  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer-members.html  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer.html  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer.js  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer__inherit__graph.map  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer__inherit__graph.md5  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound-members.html  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound.html  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound.js  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound_1_1_sound_listener-members.html  (+224 more)
.github/workflows/: ci-build.yml
CEGUI_TheoraDemo/include/: MainModule.h  MovieLogic.h  SoundManager.h
CEGUI_TheoraDemo/scripts/: CEGUI_TheoraDemo.vcproj
CEGUI_TheoraDemo/src/: MainModule.cpp  MovieLogic.cpp  SoundManager.cpp
RenderMonkey/: yuv2rgb.rfx
TheoraVideoPlugin/: Makefile.am  README  TheoraVideoPluginTarget.xcconfig  configure.ac
TheoraVideoPlugin.xcodeproj/: project.pbxproj
TheoraVideoPlugin/TheoraVideoPlugin.xcodeproj/: project.pbxproj
TheoraVideoPlugin/include/: TheoraAudioDriver.h  TheoraAudioInterface.h  TheoraExport.h  TheoraFrameQueue.h  TheoraMovieClip.h  TheoraPlayerPreReqs.h  TheoraRingBuffer.h  TheoraSeekUtility.h  TheoraTimer.h  TheoraVideoClip.h  TheoraVideoController.h  TheoraVideoDriver.h  TheoraVideoManager.h  TheoraWorkerThread.h
TheoraVideoPlugin/misc/: TheoraVideoPlugin.def
TheoraVideoPlugin/scripts/: TheoraVideoPlugin.sln  TheoraVideoPlugin.vcproj  TheoraVideoPlugin_vc8.sln  TheoraVideoPlugin_vc8.vcproj
TheoraVideoPlugin/src/: Makefile.am  TheoraAudioDriver.cpp  TheoraAudioInterface.cpp  TheoraFrameQueue.cpp  TheoraMovieClip.cpp  TheoraRingBuffer.cpp  TheoraSeekUtility.cpp  TheoraTimer.cpp  TheoraVideoClip.cpp  TheoraVideoController.cpp  TheoraVideoDriver.cpp  TheoraVideoFrame.cpp  TheoraVideoManager.cpp  TheoraWorkerThread.cpp  theoraDLLmain.cpp
cmake/: FindOGRE3D.cmake  FindPkgMacros.cmake
demos/: plugins.cfg  plugins_d.cfg  resources.cfg
demos/audio_openal/: Demo_OpenAL.vcproj  OpenAL_AudioInterface.cpp  OpenAL_AudioInterface.h  audio_openal.cpp
demos/include/: ExampleApplication.h  TheoraDemoApp.h
demos/multiple_videos/: Demo_MultipleVideos.vcproj  multiple_video.cpp
demos/player/: Demo_Player.vcproj  OgreOggSoundInterface.h  TheoraDemoApp.h  player.cpp
include/: Makefile.am  OgreTheoraDataStream.h  OgreVideoExport.h  OgreVideoManager.h
oggsound/: CMakeLists.txt  ChangeLog.txt  LICENSE
oggsound/include/: LocklessQueue.h  OgreOggISound.h  OgreOggListener.h  OgreOggSound.h  OgreOggSound.i  OgreOggSoundCallback.h  OgreOggSoundFactory.h  OgreOggSoundManager.h  OgreOggSoundPlugin.h  OgreOggSoundPrereqs.h  OgreOggSoundPrereqs.h.in  OgreOggSoundRecord.h  OgreOggSoundRoot.h  OgreOggStaticSound.h  OgreOggStaticWavSound.h  OgreOggStreamBufferSound.h  OgreOggStreamSound.h  OgreOggStreamWavSound.h
oggsound/python/: CMakeLists.txt
oggsound/src/: OgreOggISound.cpp  OgreOggListener.cpp  OgreOggSoundFactory.cpp  OgreOggSoundManager.cpp  OgreOggSoundPlugin.cpp  OgreOggSoundPluginDllStart.cpp  OgreOggSoundRecord.cpp  OgreOggSoundRoot.cpp  OgreOggStaticSound.cpp  OgreOggStaticWavSound.cpp  OgreOggStreamBufferSound.cpp  OgreOggStreamSound.cpp  OgreOggStreamWavSound.cpp
patches/: ogg_svn.patch  readme.txt  theora_svn.patch  vorbis_svn.patch
ptypes-1.8.3/: LICENSE  Makefile  readme.txt
ptypes-1.8.3/include/: pasync.h  pinet.h  pport.h  pstreams.h  ptime.h  ptypes.h
ptypes-1.8.3/src/: Makefile.BSD_OS  Makefile.Darwin  Makefile.FreeBSD  Makefile.Linux  Makefile.SunOS  Makefile.common  pasync.cxx  patomic.cxx  pcomponent.cxx  pcset.cxx  pcsetdbg.cxx  pexcept.cxx  pfatal.cxx  pfdxstm.cxx  pinfile.cxx  pinfilter.cxx  pinmem.cxx  pinstm.cxx  pintee.cxx  piobase.cxx  pipbase.cxx  pipmsg.cxx  pipmsgsv.cxx  pipstm.cxx  pipstmsv.cxx  pipsvbase.cxx  pmd5.cxx  pmem.cxx  pmsgq.cxx  (+31 more)
scripts/: Doxyfile.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  (+191 more)
shaders/: yuv2rgb.hlsl
src/: Makefile.am  OgreTheoraDataStream.cpp  OgreVideoDLLmain.cpp  OgreVideoManager.cpp
theoravideo/: CMakeLists.txt  LICENSE
theoravideo/include/: OgreTheoraDataStream.h  OgreVideoExport.h  OgreVideoManager.h
theoravideo/src/: OgreTheoraDataStream.cpp  OgreVideoDLLmain.cpp  OgreVideoManager.cpp
theoravideo/theoraplayer/src/: TheoraUtil.cpp
(+39 files in other folders)
